# python_practice

./: .gitignore  2025AE05767_rnn_assignment.html  2025AE05767_rnn_assignment.ipynb  Object_and_classes.ipynb  REPLACE_WITH_BITS_ID_cnn_assignment.ipynb  REPLACE_WITH_BITS_ID_rnn_assignment.ipynb  pyproject.toml
intrusion_detection/: intrusion_detector.py
langchain/: app.py
